<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_bg"
    android:orientation="vertical">

    <!-- test code -->
    <!--
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0000ff"
        android:layout_margin="10dp"
       	android:visibility="gone"
        android:gravity="center" >

        <TextView
            android:id="@+id/auto_diagnosis_test_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="차량자동진단 페이지" />

        <Button
            android:id="@+id/auto_diagnosis_test_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/auto_diagnosis_test_text"
            android:text="테스트버튼" />
    </RelativeLayout>
    -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:background="@drawable/detail_table"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="7.5dp"
            android:background="@drawable/diagno_table_01"
            android:gravity="right">

            <Button
                android:id="@+id/diagno_btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:layout_marginTop="64dp"
                android:background="@drawable/btn_diagno_ok" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="209.5dp"
            android:layout_marginTop="7.5dp"
            android:background="@drawable/diagno_table_02"
            android:gravity="right">


            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:id="@+id/diagno_mileage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="75dp"
                android:gravity="right"
                android:text="@string/common_zero"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:layout_marginTop="75dp"
                android:layout_toRightOf="@id/diagno_mileage_text"
                android:text="@string/common_lower_kilometer"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="409.5dp"
            android:layout_marginTop="7.5dp"
            android:background="@drawable/diagno_table_03"
            android:gravity="right"
            android:orientation="horizontal">

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:id="@+id/diagno_time_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="75dp"
                android:text="@string/common_time"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="75dp"
                android:text="@string/common_colon"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:id="@+id/diagno_time_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="75dp"
                android:text="@string/common_time"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="75dp"
                android:text="@string/common_colon"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:id="@+id/diagno_time_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:layout_marginTop="75dp"
                android:text="@string/common_time"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="149dp"
            android:background="@drawable/diagno_table_04"
            android:gravity="right">

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:id="@+id/diagno_oil_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="68dp"
                android:text="@string/common_zero"
                android:textColor="@color/_FFFFFF"
                android:textSize="24dp" />

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:layout_marginTop="75dp"
                android:layout_toRightOf="@id/diagno_oil_text"
                android:text="@string/common_won"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="209.5dp"
            android:layout_marginTop="149dp"
            android:background="@drawable/diagno_table_05"
            android:gravity="right">

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:id="@+id/diagno_coolant_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="75dp"
                android:text="@string/common_zero"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:layout_marginTop="75dp"
                android:layout_toRightOf="@id/diagno_coolant_text"
                android:text="@string/common_centigrade"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="409.5dp"
            android:layout_marginTop="149dp"
            android:background="@drawable/diagno_table_06"
            android:gravity="right">

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:id="@+id/diagno_fuel_consumption_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="68dp"
                android:text="@string/common_zero"
                android:textColor="@color/_FFFFFF"
                android:textSize="24dp" />

            <kr.hdd.carleamingTest.common.textview.NanumBarunGothicBold_TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:layout_marginTop="75dp"
                android:layout_toRightOf="@id/diagno_fuel_consumption_text"
                android:text="@string/common_liter"
                android:textColor="@color/_FFFFFF"
                android:textSize="15dp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>